assets/scss/base/baseline.scss
.visually-hidden {
  display: none;
}

html {
  scroll-padding-top: 64px; // Height of header
}

.overflow-hidden {
  overflow-y: hidden;
}
img {
  max-width: 100%;
  height: auto;
}

main {
  padding-bottom: 88px;
}

.faktaboks {
  border: 1px solid rgb(95, 194, 255);
  padding: 1rem;
  color: rgb(95, 194, 255);
  border-radius: 10px;
  font-style: italic;
  position: relative;
  right: 2rem;
}

.lastblock {
  margin-bottom: 3rem;
}

h2, h3 {
  font-size: 1rem;
  margin-bottom: 0;
}

@media (min-width: 992px) {
  .mainGrid {
    display: grid;
    grid-template-columns: 2fr 3fr 2fr;
  }
}

